<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/darkPurple"
    android:padding="10dp"
    app:chainUseRtl="true">
    <TextView
        android:id="@+id/youWonTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/youWon"
        android:textSize="25sp"
        android:textColor="@color/lightGreen"
        android:fontFamily="@font/rockout"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"/>
    <TextView
        android:id="@+id/yourNameTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/youWonTv"
        android:text="@string/name"
        android:textSize="20sp"
        android:textColor="@color/lightGreen"
        android:fontFamily="@font/rockout"
        android:layout_alignBottom="@id/yourNameEt"
        android:gravity="bottom"/>

    <EditText
        android:id="@+id/yourNameEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/youWonTv"
        android:layout_marginStart="0dp"
        android:layout_toEndOf="@id/yourNameTv"
        android:textSize="20sp"
        android:textColor="@color/lightGreen"
        android:fontFamily="@font/rockout"
        />
    <TextView
        android:id="@+id/yourScoreTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/yourNameTv"
        android:text="@string/score"
        android:textSize="20sp"
        android:textColor="@color/lightGreen"
        android:fontFamily="@font/rockout"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"/>
    <TextView
        android:id="@+id/scoreNumTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/yourScoreTv"
        android:layout_below="@id/yourNameTv"
        android:layout_alignBottom="@id/yourScoreTv"
        android:textSize="20sp"
        android:textColor="@color/lightGreen"
        android:fontFamily="@font/rockout"
        android:gravity="bottom"/>
    <Button
        android:id="@+id/saveScoreBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/yourScoreTv"
        android:text="@string/saveScore"
        android:background="@drawable/btn2"
        android:textSize="15sp"
        android:fontFamily="@font/rockout"
        android:textStyle="bold"
        android:layout_alignEnd="@id/unsaveScoreBtn"
        android:layout_alignStart="@id/unsaveScoreBtn"
        android:layout_marginBottom="5dp"
        />
    <Button
        android:id="@+id/unsaveScoreBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/saveScoreBtn"
        android:text="@string/dontSaveScore"
        android:background="@drawable/btn2"
        android:textSize="15sp"
        android:fontFamily="@font/rockout"
        android:padding="5dp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"/>


</RelativeLayout>