<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:paddingTop="10dp"
    android:background="@drawable/ic_vision_background"
    >
    <CheckBox
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="end"
        android:id="@+id/sound_btn"
        android:button="@null"
        android:background="@drawable/sound_selector"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="."
        android:textSize="150sp"
        android:gravity="center"
        android:textColor="#B7FF66"
        android:layout_weight="1"
        android:fontFamily="@font/invaders"
        />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:gravity="top">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/play_btn"
            android:text="@string/play"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/rockout"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/score_btn"
            android:layout_below="@id/play_btn"
            android:text="@string/scoreBoard"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/rockout"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/theme_open_btn"
            android:layout_below="@id/score_btn"
            android:text="@string/theme"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:fontFamily="@font/rockout"
            android:textStyle="bold"
            />
    </RelativeLayout>

</LinearLayout>