<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/darkPurple"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:id="@+id/RLayout1"
    android:paddingTop="20dp"
    android:paddingBottom="20dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theme"
        android:textColor="@color/lightGreen"
        android:textSize="32sp"
        android:gravity="center"
        android:fontFamily="@font/rockout"
        android:textAllCaps="false"/>

    <View
        android:id="@+id/setting_divider"
        style="@style/Divider" android:layout_below="@id/title"/>


    <RelativeLayout
        android:id="@+id/themeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/setting_divider"
        >

        <TextView
            android:id="@+id/playerIconTv"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:gravity="center_vertical"
            android:text="@string/player"
            android:textColor="@color/lightGreen"
            android:fontFamily="@font/rockout"
            android:textSize="15sp"
            android:layout_margin="5dp"/>

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/playerIconTv"
            android:orientation="horizontal"
            >
            <RadioButton
                android:id="@+id/playerOption1"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:background="@drawable/ic_space_player_2"
                android:button="@null"
                android:layout_margin="5dp"
                android:layout_weight="1"/>
            <RadioButton
                android:id="@+id/playerOption2"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:background="@drawable/ic_submarine_2"
                android:button="@null"
                android:layout_margin="5dp"
                android:layout_weight="1"/>
            <RadioButton
                android:id="@+id/playerOption3"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:background="@drawable/ic_sheriff_2"
                android:button="@null"
                android:layout_margin="5dp"
                android:layout_weight="1"/>
        </RadioGroup>

        <TextView
            android:id="@+id/enemyIconTv"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="@string/enemy"
            android:textColor="@color/lightGreen"
            android:fontFamily="@font/rockout"
            android:textSize="15sp"
            android:layout_below="@id/playerIconTv"
            android:layout_margin="5dp"/>
        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/playerIconTv"
            android:orientation="horizontal"
            android:layout_below="@id/radioGroup1">
            <RadioButton
                android:id="@+id/enemyOption1"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_spaceship_2"
                android:scaleType="fitXY"
                android:button="@null"
                android:layout_margin="5dp"
                android:layout_weight="1"/>
            <RadioButton
                android:id="@+id/enemyOption2"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_jellyfish_2"
                android:scaleType="fitXY"
                android:button="@null"
                android:layout_margin="5dp"
                android:layout_weight="1"/>
            <RadioButton
                android:id="@+id/enemyOption3"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_thief_2"
                android:scaleType="fitXY"
                android:button="@null"
                android:layout_margin="5dp"
                android:layout_weight="1"/>
        </RadioGroup>
        <TextView
            android:id="@+id/backgroundTv"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:gravity="center"
            android:text="@string/background"
            android:textColor="@color/lightGreen"
            android:fontFamily="@font/rockout"
            android:textSize="15sp"
            android:layout_below="@id/enemyIconTv"
            android:layout_margin="5dp"/>
        <RadioGroup
            android:id="@+id/radioGroup3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/backgroundTv"
            android:orientation="horizontal"
            android:layout_below="@id/radioGroup2"
            >
            <RadioButton
                android:id="@+id/backgroundOption1"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:background="@drawable/ic_vision_backgroound_2"
                android:button="@null"
                android:layout_margin="5dp"
                android:layout_weight="1"/>
            <RadioButton
                android:id="@+id/backgroundOption2"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:background="@drawable/ic_purple_2"
                android:button="@null"
                android:layout_margin="5dp"
                android:layout_weight="1"/>
            <RadioButton
                android:id="@+id/backgroundOption3"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:background="@drawable/ic_desert_2"
                android:button="@null"
                android:layout_margin="5dp"
                android:layout_weight="1"/>
        </RadioGroup>
        <Button
            android:id="@+id/themeSetBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/radioGroup3"
            android:layout_alignParentEnd="true"
            android:text="@string/set"
            android:background="@drawable/btn1"
            android:textSize="15sp"
            android:gravity="center"
            android:textStyle="bold"
            android:fontFamily="@font/rockout"
            android:textAllCaps="false"
            android:layout_marginTop="10dp"/>

    </RelativeLayout>

</RelativeLayout>